More work on home screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <main>
   <body>
+  <form action="studentPage">
     <button type="button">Home</button>
+  </form>
+    <a href="studentPage" class="button">Click Here</a>
+    <!--having trpouble remebering how to connect html pages to html pages?-->
     <button type="button">Fall 2019</button>
     <button type="button">Spring 2020</button>
     <button type="button">Fall 2021</button>
