added pic on home screen, need to change body tagss in index

--- a/index.html
+++ b/index.html
@@ -13,32 +13,28 @@
 
 <main>
   <body>
-    <div class="buttons">
-      <a href="studentPage.html"><button type="button">Home</button></a>
     <div class="dropdown">
+      <a href="index.html"><button type="button">Home</button></a>
       <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
       <div id="myDropdown" class="dropdown-content">
-        <a href="studentPage.html">Link 1</a>
-        <a href="studentPage.html">Link 2</a>
-        <a href="studentPage.html">Link 3</a>
+        <a href="studentBioPage_S_F19.html">Sculpture</a>
+        <a href="studentBioPage_AS_F19.html">Ad Sculpture</a>
       </div>
+    </div>
       <div class="dropdown">
         <button class="dropbtn" onclick="dropdownFunc()">Spring 2020</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="studentPage.html">Link 1</a>
-          <a href="studentPage.html">Link 2</a>
-          <a href="studentPage.html">Link 3</a>
+          <a href="studentBioPage_S_S20.html">Sculpture</a>
+          <a href="studentBioPage_AS_S20">Ad Sculpture</a>
         </div>
+      </div>
         <div class="dropdown">
           <button class="dropbtn" onclick="dropdownFunc()">Fall 2020</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="studentPage.html">Link 1</a>
-            <a href="studentPage.html">Link 2</a>
-            <a href="studentPage.html">Link 3</a>
+            <a href="studentBioPage_S_F20.html">Sculpture</a>
+            <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
           </div>
-
-    </div>
-  </div>
+        </div>
 
 <!--
 <div>
