Progress on Bio Page

--- a/studentBioPage_S_F19.html
+++ b/studentBioPage_S_F19.html
@@ -19,8 +19,136 @@
  <p>Click on a student to learn more about their work. These students normally
 ​ work with the same theme, such as "Monument," or "Fear."</p>
 
-<p element id="hp"><img src="photos/laurenBuntingProfile.jpg" alt="Lauren Profile Picture">
-<a href="laurenBunting.html"> Lauren Bunting </a>
-What’s up, guys! I’m a junior from Cabot, Arkansas, and am majoring in graphic design. To me personally, sculpture has been a class that really gives me a break from the usual craft that comes with my major. I hope you guys enjoy the work that I create this semester and take a second to check out more of my projects on my Instagram: @ahueoflauren.</p>
+<article>
+  <img src="photos/laurenBuntingProfile.jpg" alt="Lauren Bunting Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Lauren Bunting</h2></a>
+    <p>What’s up, guys! I’m a junior from Cabot, Arkansas, and am majoring in graphic design. To me personally, sculpture has been a class that really gives me a break from the usual craft that comes with my major. I hope you guys enjoy the work that I create this semester and take a second to check out more of my projects on my Instagram: @ahueoflauren. </p>
+  </section>
+</article>
+
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Ashlyn Garrett Profile Picture">
+  <section>
+    <h2><a href="ashlynGarret.html">Ashlyn Garrett</h2></a>
+    <p>Hello! My name is Ashlyn Garrett. I’m a junior here at Arkansas State University, and I’m majoring in Graphic Design. I’m from a town about 2 hours south of here called Heber Springs. While I’m majoring in Graphic Design, I also have a love for drawing, painting, printmaking, and sculpture. Here, you can find my sculpture work and what it’s all about. I hope you enjoy my art as much as I enjoyed making it! Thanks for checking out my page and don’t forget to follow my art account on Instagram @ashlyn.garrett </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/LaneyGilliamProfile.jpeg" alt="Laney Gilliam Profile Picture">
+  <section>
+    <h2><a href="laneygilliam.html">Laney Gilliam</h2></a>
+    <p>Hi my name is Laney Gilliam. I’m from Little Rock Arkansas but currently residing in Jonesboro to attend ASU. My major is Graphic Design. If you have questions about my work or commissions you can contact me at: laney.gilliam@smail.astate.edu. Thanks for showing interest in my art! ​ </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/AutumnHarrisProfile.jpg" alt="​Autumn Harris Profile Picture">
+  <section>
+    <h2><a href="AutumnHarris.html">​Autumn Harris</h2></a>
+    <p>Welcome to my page! I’m Autumn, a junior here at A-State from Nashville, Arkansas. I am majoring in graphic design with a minor in marketing. Feel free to leave a comment at the bottom of this page about my work, all feedback is good feedback. </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/MadisonLandisProfile.png" alt="Madison Landis Profile Picture">
+  <section>
+    <h2><a href="MadisonLandis.html">Madison Landis</h2></a>
+    <p>Hi, I'm Madison. I'm currently studying Studio Art with an emphasis in sculpture here at Arkansas State. Throughout the past 4 years I have really pushed myself to become an artist that I am proud of. From the beginning, I have challenged myself to put personal meaning into each of my art pieces. Each art piece I create is a testimony of God's goodness in my life. When I see previous works I have created, I am immediately reminded of the season I was in, the things I overcame, and the blessings that poured over me. I hope that anyone from any walk of life can relate with my art and be inspired by it. ​ </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/SarahLiepeProfile.jpg" alt="Sarah Liepe Profile Picture">
+  <section>
+    <h2><a href="SarahLiepe.html">​Sarah Liepe</h2></a>
+    <p>I have lived in Jonesboro, AR all my life. I love art of all kinds, so I am majoring in graphic design and minoring in writing studies at ASTATE. I am hoping that book design is in my future so I can combine my love of story-making with my love of design and illustration. </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/KayliLumpkinsProfile.jpg" alt="Kayli Lumpkins Profile Picture">
+  <section>
+    <h2><a href="KayliLumpkins.html">Kayli Lumpkins</h2></a>
+    <p>Hey! First of all, thanks for exploring my page! My name is Kayli, and I am a Graphic Design Junior at Arkansas State. My passion for design and art didn’t start until the last couple of years in high school. I graduated from Cabot Arkansas in 2017, and have been pursuing my career goal ever since. This particular class is Sculpture. While the main focus of my degree is designing, I still enjoy the opportunity to take studio art classes. I would love for you to follow my Instagram to keep up with my latest work and drop a comment on here! :) @kaylis_art </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/MeganMcClureProfile.jpeg" alt="Megan McClure Profile Picture">
+  <section>
+    <h2><a href="MeganMcClure.html">​Megan McClure</h2></a>
+    <p>Hello my name is Megan McClure and I am an art education major at Arkansas State University. I am from St. Louis, Missouri and I play for the A-state women’s soccer team. Besides creating art and playing soccer, I enjoy hiking, biking, and hanging out with my cat Roger! </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/JeniPearceProfile.png" alt="Jeni Pearce Profile Picture">
+  <section>
+    <h2><a href="​JeniPearce.html">Jeni Pearce</h2></a>
+    <p>I am from Blytheville Arkansas and I am currently studying to become an art teacher. Other than attending school full-time, I am a devoted wife and mother. I started school again in 2016 after a mid-life crisis… I TURNED 30… YIKES. ​ </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/JoyPeltonProfile.jpeg" alt="Joy Pelton Profile Picture">
+  <section>
+    <h2><a href="JoyPelton.html">Joy Pelton</h2></a>
+    <p>​I’m a senior graphic design major from Poplar Bluff, Missouri. I love all types of art, especially photography. On this page, you’ll see my sculptures from this semester’s class.
+<br>
+<br>
+@JoyLenoraDesign (Instagram)
+<br>
+@JoyPeltonPhotography (Instagram/Facebook)</p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <p>I am from Cave City, Arkansas, the home of the world's sweetest watermelons. I am a Studio Arts major with an emphasis in Drawing/Painting. I mainly works large-scale in oil paint, but I do smaller works in watercolor. My work focuses on the Southern convention and how it can be transformed into an empowering environment. </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <p>Hi! My name is Rachel and I am from Paragould, Arkansas. I am currently a junior working on a degree in studio art with an emphasis in photography. While sculpture is not my main focus in school, I enjoy working with new mediums and I am excited to incorporate my learned skills in my photography process. To view my other art, check out my Instagram page @rrowlandphotography. Thanks! </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <p>Hey, y'all! I'm Beth Ann, and I'm from DeWitt, Arkansas. I am majoring in graphic design, but I also have a love for all things studio art. I love trying new things, and sculpture has been a new experience for me to dabble in! Feel free to leave me comments, and follow my art Instagram to keep up with more of my work: ba.creates. Thanks for visiting my profile! :)  </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <p>I am currently a junior at A-state going for my Bachelor's in Graphic Design. My emphasis area is in digital design, such as coding apps and web design. I have a work study position in the Art Annex fixing the printer every 30 minutes. Follow me on Instagram for all my work: sabrinasturtevant
+
+I am also the creator of the webpage. If you have any constructive criticism for me, I am always open.  </p>
+  </section>
+</article>
+
+<article>
+  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <section>
+    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <p>Hi, I am a Digital Design major at Arkansas State University. I am hoping that once I graduate, I can travel to my hearts content and learn as much as I can about the world. My family recently welcomed a dog into our home and she makes us so happy. Her name is Rainy and she is my world. </p>
+  </section>
+</article>
+
+
+
+
  </body>
 </html>
