more bio work. almost done with 2019 section

--- a/studentBioPage_S_F19.html
+++ b/studentBioPage_S_F19.html
@@ -15,7 +15,7 @@
 
  <body>
 
- <h1>Sculpture Student Fall 2019</h1>
+ <h1>Sculpture Students Fall 2019</h1>
  <p>Click on a student to learn more about their work. These students normally
 ​ work with the same theme, such as "Monument," or "Fear."</p>
 
@@ -106,33 +106,33 @@
 </article>
 
 <article>
-  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <img src="photos/MorganPresleyProfile.png" alt="​Morgan Presley Profile Picture">
   <section>
-    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <h2><a href="MorganPresley.html">Morgan Presley</h2></a>
     <p>I am from Cave City, Arkansas, the home of the world's sweetest watermelons. I am a Studio Arts major with an emphasis in Drawing/Painting. I mainly works large-scale in oil paint, but I do smaller works in watercolor. My work focuses on the Southern convention and how it can be transformed into an empowering environment. </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <img src="photos/RachealRowlandProfile.jpg" alt="Racheal Rowland Profile Picture">
   <section>
-    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <h2><a href="RachealRowland.html">Racheal Rowland</h2></a>
     <p>Hi! My name is Rachel and I am from Paragould, Arkansas. I am currently a junior working on a degree in studio art with an emphasis in photography. While sculpture is not my main focus in school, I enjoy working with new mediums and I am excited to incorporate my learned skills in my photography process. To view my other art, check out my Instagram page @rrowlandphotography. Thanks! </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <img src="photos/BethAnnShadwickProfile.jpg" alt="Beth Ann Shadwick Profile Picture">
   <section>
-    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <h2><a href="BethAnnShadwick.html">Beth Ann Shadwick</h2></a>
     <p>Hey, y'all! I'm Beth Ann, and I'm from DeWitt, Arkansas. I am majoring in graphic design, but I also have a love for all things studio art. I love trying new things, and sculpture has been a new experience for me to dabble in! Feel free to leave me comments, and follow my art Instagram to keep up with more of my work: ba.creates. Thanks for visiting my profile! :)  </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <img src="photos/SabrinaSturtevantProfile.jpg" alt="Sabrina Sturtevant Profile Picture">
   <section>
-    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <h2><a href="SabrinaSturtevant.html">Sabrina Sturtevant</h2></a>
     <p>I am currently a junior at A-state going for my Bachelor's in Graphic Design. My emphasis area is in digital design, such as coding apps and web design. I have a work study position in the Art Annex fixing the printer every 30 minutes. Follow me on Instagram for all my work: sabrinasturtevant
 
 I am also the creator of the webpage. If you have any constructive criticism for me, I am always open.  </p>
@@ -140,9 +140,9 @@ I am also the creator of the webpage. If you have any constructive criticism for
 </article>
 
 <article>
-  <img src="photos/ashlynGarretProfile.jpg" alt="Lauren Profile Picture">
+  <img src="photos/BrittanyWatersProfile.png" alt="​Brittany Waters Profile Picture">
   <section>
-    <h2><a href="laurenBunting.html">Ashlyn Garrett</h2></a>
+    <h2><a href="BrittanyWaters.html">Brittany Waters</h2></a>
     <p>Hi, I am a Digital Design major at Arkansas State University. I am hoping that once I graduate, I can travel to my hearts content and learn as much as I can about the world. My family recently welcomed a dog into our home and she makes us so happy. Her name is Rainy and she is my world. </p>
   </section>
 </article>
