another update to bios

--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -80,7 +80,7 @@ comfortable and confident in their own. </p>
   <img src="photos/TylerLeeProfile.jpg" alt="Tyler Lee Profile Picture">
   <section>
     <h2><a href="TylerLee.html">Tyler Lee</h2></a>
-    <p>Hello my name is Megan McClure and I am an art education major at Arkansas State University. I am from St. Louis, Missouri and I play for the A-state women’s soccer team. Besides creating art and playing soccer, I enjoy hiking, biking, and hanging out with my cat Roger! </p>
+    <p>My name is Tyler Lee. I’m a total goofball who’s obsessed with Pokémon. I’m heavily inspired by comics, manga, and anime and I’m aiming to become an illustrator and animator. My work in art typically draws from fascinating concepts that make me think about them for prolonged periods of time or from more personal ideas that are somehow a reflection of a part of me. </p>
   </section>
 </article>
 
@@ -88,7 +88,7 @@ comfortable and confident in their own. </p>
   <img src="photos/JeniPearceProfile.png" alt="Jeni Pearce Profile Picture">
   <section>
     <h2><a href="​JeniPearce.html">Jeni Pearce</h2></a>
-    <p>I am from Blytheville Arkansas and I am currently studying to become an art teacher. Other than attending school full-time, I am a devoted wife and mother. I started school again in 2016 after a mid-life crisis… I TURNED 30… YIKES. ​ </p>
+    <p>I grew up and live in Brookland, AR. I am a Graphic Design major at ASTATE. I enjoy working with various aspects of art, whether it be graphic design or traditional art. I am currently interested in working with video, film and animation. I personally feel artists should be willing to work with all different types of art and mediums. Life is too short to not experiment with new techniques. I feel I am a Jack of all Trades in that I work with multiple mediums. Sometimes, I don’t even feel I have a particular style, I am able to explore new styles and will not hesitate to try something new if it means I can learn a new thing. ​ </p>
   </section>
 </article>
 
