more work to indivudal student pages

--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
- <script src="myscripts.js"></script>
+<script src="myscripts.js"></script>
 
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <link href="bio.style.css" type="text/css" rel="stylesheet">
+  <link href="studentBioPage.style.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="//fonts.googleapis.com/ css?family=Open+Sans:300,400,600,700&amp;lang=en" />
   <link href="https://fonts.googleapis.com/ css2?family=Kumbh+Sans&family=Source+Serif+Pro&display=swap" rel="stylesheet">
   <title>Fall 2019 AD Sculpture</title>
 </head>
 
  <body>
+   <div class="dropdown">
+     <a href="index.html"><button type="button">Home</button></a>
+     <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
+     <div id="myDropdown" class="dropdown-content">
+       <a href="studentBioPage_S_F19.html">Sculpture</a>
+       <a href="studentBioPage_AS_F19.html">Ad Sculpture</a>
+     </div>
+   </div>
+     <div class="dropdown">
+       <button class="dropbtn" onclick="dropdownFunc()">Spring 2020</button>
+       <div id="myDropdown" class="dropdown-content">
+         <a href="studentBioPage_S_S20.html">Sculpture</a>
+         <a href="studentBioPage_AS_S20">Ad Sculpture</a>
+       </div>
+     </div>
+       <div class="dropdown">
+         <button class="dropbtn" onclick="dropdownFunc()">Fall 2020</button>
+         <div id="myDropdown" class="dropdown-content">
+           <a href="studentBioPage_S_F20.html">Sculpture</a>
+           <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
+         </div>
+       </div>
+
 
  <h1>Advanced Sculpture Students Fall 2019</h1>
  <p>Click on a student to learn more about their work. These students have a lot of freedom when it comes to constructing their sculptures.</p>
