--- a/studentBioPage_S_F19.html
+++ b/studentBioPage_S_F19.html
@@ -14,7 +14,29 @@
 </head>
 
  <body>
-
+   <div class="dropdown">
+     <a href="index.html"><button type="button">Home</button></a>
+     <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
+     <div id="myDropdown" class="dropdown-content">
+       <a href="studentBioPage_S_F19.html">Sculpture</a>
+       <a href="studentBioPage_AS_F19.html">Ad Sculpture</a>
+     </div>
+   </div>
+     <div class="dropdown">
+       <button class="dropbtn" onclick="dropdownFunc()">Spring 2020</button>
+       <div id="myDropdown" class="dropdown-content">
+         <a href="studentBioPage_S_S20.html">Sculpture</a>
+         <a href="studentBioPage_AS_S20">Ad Sculpture</a>
+       </div>
+     </div>
+       <div class="dropdown">
+         <button class="dropbtn" onclick="dropdownFunc()">Fall 2020</button>
+         <div id="myDropdown" class="dropdown-content">
+           <a href="studentBioPage_S_F20.html">Sculpture</a>
+           <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
+         </div>
+       </div>
+       
  <h1>Sculpture Students Fall 2019</h1>
  <p>Click on a student to learn more about their work. These students normally
 ​ work with the same theme, such as "Monument," or "Fear."</p>
