editing Lauren's page

--- a/laurenBunting.html
+++ b/laurenBunting.html
@@ -44,14 +44,28 @@
 
 
     <h1> Lauren Bunting </h1>
+    <br>
+    <br>
+
+    <img src="photos/projects/buntingOne.jpeg" alt="Mime Sculpture" class="center">
+
     <h2> Mime Your Own Business </h2>
       <p> Gloves. Facepaint. Unspeakable Acts. Mimes are theatrical characters that are notoriously known for getting themselves into sticky situations. Of course, most of us have caught them in the act of being stuck in a box. These boxes however are invisible to the viewer’s eye and leave the mime that they contain at a slight disadvantage. It is unknown what these speechless characters have done to deserve such punishment or how they will escape. What are they hiding behind the facepaint and gloves? We may never know. But one thing I know for sure: Whatever you do, stay away from boxes. ​</p>
-<br>
     <h4> Comments </h4>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <img src="photos/projects/buntingTwo.jpeg" alt="Dark Hallway Sculpture" class="center">
+
 
     <h2> Wait, I Can't See </h2>
       <p> It is a common fear to be afraid of the dark when we are younger. Light is a safe haven, where the dark is not. The darkness leaves you incapacitated, visionless, and unsure of what lies just two feet in front of you. It seems almost crazy to submit oneself into the darkness without any source of light. With this idea in mind, we decided to create an interactive piece that manipulates darkness in a way that catches the audience by surprise. You are welcome to enter our piece and experience this idea for yourself. Please watch your step. ​</p>
-<br>
     <h4> Comments </h4>
 
     <br>
