--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -7,7 +7,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link href="studentBioPage.style.css" type="text/css" rel="stylesheet">
+  <link href="bio.style.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="//fonts.googleapis.com/ css?family=Open+Sans:300,400,600,700&amp;lang=en" />
   <link href="https://fonts.googleapis.com/ css2?family=Kumbh+Sans&family=Source+Serif+Pro&display=swap" rel="stylesheet">
   <title>Fall 2019 AD Sculpture</title>
@@ -36,10 +36,18 @@
            <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
          </div>
        </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
  <h1>Advanced Sculpture Students Fall 2019</h1>
- <p>Click on a student to learn more about their work. These students have a lot of freedom when it comes to constructing their sculptures.</p>
+ <p class = "first">Click on a student to learn more about their work. These students have a lot of freedom when it comes to constructing their sculptures.</p>
 
 <article>
   <img src="photos/KalyLynnBeedeProfile.jpg" alt="​​Kaly Lynn Beede Profile Picture">
@@ -108,68 +116,44 @@ comfortable and confident in their own. </p>
 </article>
 
 <article>
-  <img src="photos/JeniPearceProfile.png" alt="Jeni Pearce Profile Picture">
+  <img src="photos/KaileyMcQuayProfile.jpg" alt="Kailey McQuay Profile Picture">
   <section>
-    <h2><a href="​JeniPearce.html">Jeni Pearce</h2></a>
-    <p>I grew up and live in Brookland, AR. I am a Graphic Design major at ASTATE. I enjoy working with various aspects of art, whether it be graphic design or traditional art. I am currently interested in working with video, film and animation. I personally feel artists should be willing to work with all different types of art and mediums. Life is too short to not experiment with new techniques. I feel I am a Jack of all Trades in that I work with multiple mediums. Sometimes, I don’t even feel I have a particular style, I am able to explore new styles and will not hesitate to try something new if it means I can learn a new thing. ​ </p>
+    <h2><a href="​KaileyMcQuay.html">Kailey McQuay</h2></a>
+    <p>I grew up and live in Brookland, AR. I am a Graphic Design major at ASTATE. I enjoy working with various aspects of art, whether it be graphic design or traditional art. I am currently interested in working with video, film and animation. I personally feel artists should be willing to work with all different types of art and mediums. Life is too short to not experiment with new techniques. I feel I am a Jack of all Trades in that I work with multiple mediums. Sometimes, I don’t even feel I have a particular style, I am able to explore new styles and will not hesitate to try something new if it means I can learn a new thing.  ​ </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/JoyPeltonProfile.jpeg" alt="Joy Pelton Profile Picture">
+  <img src="photos/EastonReeceProfile.png" alt="Easton Reece Profile Picture">
   <section>
-    <h2><a href="JoyPelton.html">Joy Pelton</h2></a>
-    <p>​I’m a senior graphic design major from Poplar Bluff, Missouri. I love all types of art, especially photography. On this page, you’ll see my sculptures from this semester’s class.
-<br>
-<br>
-@JoyLenoraDesign (Instagram)
-<br>
-@JoyPeltonPhotography (Instagram/Facebook)</p>
+    <h2><a href="EastonReece.html">Easton Reece</h2></a>
+    <p>​I am a local artist from the Jonesboro, Arkansas area. I am majoring in Studio Art with an emphasis in Sculpture at Arkansas State University. While my main focus is sculpture, he also enjoys creating work via drawings, spray paint, digital art, and code art.</p>
   </section>
 </article>
 
 <article>
-  <img src="photos/MorganPresleyProfile.png" alt="​Morgan Presley Profile Picture">
+  <img src="photos/MichaelRingProfile.jpg" alt="Michael Ring Profile Picture">
   <section>
-    <h2><a href="MorganPresley.html">Morgan Presley</h2></a>
-    <p>I am from Cave City, Arkansas, the home of the world's sweetest watermelons. I am a Studio Arts major with an emphasis in Drawing/Painting. I mainly works large-scale in oil paint, but I do smaller works in watercolor. My work focuses on the Southern convention and how it can be transformed into an empowering environment. </p>
+    <h2><a href="MichaelRing.html">Michael Ring</h2></a>
+    <p>Hello. I am Michael Ring and I’m a Bachelor of Fine Arts major with an emphasis in illustration. I currently reside in Lake City, Arkansas but am originally from Brockwell up near Calico Rock. While sculpture isn’t my major, I do enjoy the freedom that comes with it. The freedom to express your ideas to the fullest and get your vision across. The pieces I’m creating for this semester are my most personal and I hope everyone enjoys what they see.  </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/RachealRowlandProfile.jpg" alt="Racheal Rowland Profile Picture">
+  <img src="photos/PattyNallScottProfile.jpg" alt="Patty Nall Scott Profile Picture">
   <section>
-    <h2><a href="RachealRowland.html">Racheal Rowland</h2></a>
-    <p>Hi! My name is Rachel and I am from Paragould, Arkansas. I am currently a junior working on a degree in studio art with an emphasis in photography. While sculpture is not my main focus in school, I enjoy working with new mediums and I am excited to incorporate my learned skills in my photography process. To view my other art, check out my Instagram page @rrowlandphotography. Thanks! </p>
+    <h2><a href="PattyNallScott.html">Patty Nall Scott</h2></a>
+    <p>I am a local studio artist with an emphasis in Sculpture at Arkansas State University. I also have an interest in Printmaking and Ceramics.  Sculpture allows me to work with a wide array of mediums; paint, clay, wood, glass, yarn, wire, plastics and found objects. The message I am trying to convey will determine the medium used. This past summer, I created a series in printmaking (screen and linoleum prints), using the domestic crocheted doily as it transcended through four generations of women in my family. Other works have been inspired by life experiences dealing with loss, health, emotional and social issues, while others have been created to recognize, honor or in memory of a person or profession. And lastly, I have created pieces inspired by nature such as the oldest tree on the ASU campus still finding life and purpose in spite of its old age and broken limbs.  In addition to my studies at ASU, I have attended the International Glass Artist conventions in Las Vegas, Nevada in two consecutive years, taking classes under a master glass mosaic artist from Australia.  </p>
   </section>
 </article>
 
 <article>
-  <img src="photos/BethAnnShadwickProfile.jpg" alt="Beth Ann Shadwick Profile Picture">
+  <img src="photos/ZhuoyanYaoProfile.jpeg" alt="Zhuoyan Yao Profile Picture">
   <section>
-    <h2><a href="BethAnnShadwick.html">Beth Ann Shadwick</h2></a>
-    <p>Hey, y'all! I'm Beth Ann, and I'm from DeWitt, Arkansas. I am majoring in graphic design, but I also have a love for all things studio art. I love trying new things, and sculpture has been a new experience for me to dabble in! Feel free to leave me comments, and follow my art Instagram to keep up with more of my work: ba.creates. Thanks for visiting my profile! :)  </p>
+    <h2><a href="ZhuoyanYao.html">Zhuoyan Yao</h2></a>
+    <p>A painter, installation artist, originally from China. Like to create artworks that release joy and peace. Into color and texture. Mostly quiet, sometimes energetic. Embracing beauty, truth and freedom.  </p>
   </section>
 </article>
-
-<article>
-  <img src="photos/SabrinaSturtevantProfile.jpg" alt="Sabrina Sturtevant Profile Picture">
-  <section>
-    <h2><a href="SabrinaSturtevant.html">Sabrina Sturtevant</h2></a>
-    <p>I am currently a junior at A-state going for my Bachelor's in Graphic Design. My emphasis area is in digital design, such as coding apps and web design. I have a work study position in the Art Annex fixing the printer every 30 minutes. Follow me on Instagram for all my work: sabrinasturtevant
-
-I am also the creator of the webpage. If you have any constructive criticism for me, I am always open.  </p>
-  </section>
-</article>
-
-<article>
-  <img src="photos/BrittanyWatersProfile.png" alt="​Brittany Waters Profile Picture">
-  <section>
-    <h2><a href="BrittanyWaters.html">Brittany Waters</h2></a>
-    <p>Hi, I am a Digital Design major at Arkansas State University. I am hoping that once I graduate, I can travel to my hearts content and learn as much as I can about the world. My family recently welcomed a dog into our home and she makes us so happy. Her name is Rainy and she is my world. </p>
-  </section>
-</article>
-
 
 
 
