--- a/studentBioPage_S_F19.html
+++ b/studentBioPage_S_F19.html
@@ -36,9 +36,9 @@
            <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
          </div>
        </div>
-       
+
  <h1>Sculpture Students Fall 2019</h1>
- <p>Click on a student to learn more about their work. These students normally
+ <p class = "first">Click on a student to learn more about their work. These students normally
 ​ work with the same theme, such as "Monument," or "Fear."</p>
 
 <article>
