more css for buttons

--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -16,6 +16,8 @@
  <body>
    <div class="dropdown">
      <a href="index.html"><button type="button">Home</button></a>
+   </div>
+    <div class="dropdown">
      <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
      <div id="myDropdown" class="dropdown-content">
        <a href="studentBioPage_S_F19.html">Sculpture</a>
@@ -41,10 +43,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
+
 
  <h1>Advanced Sculpture Students Fall 2019</h1>
  <p class = "first">Click on a student to learn more about their work. These students have a lot of freedom when it comes to constructing their sculptures.</p>
