added banner above ad sculpture and fixed some html issues

--- a/studentBioPage_S_F19.html
+++ b/studentBioPage_S_F19.html
@@ -14,6 +14,7 @@
 </head>
 
  <body>
+   <main>
    <div class="dropdown">
      <a href="index.html"><button type="button">Home</button></a>
      <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
@@ -171,6 +172,6 @@ I am also the creator of the webpage. If you have any constructive criticism for
 
 
 
-
+</main>
  </body>
 </html>
