--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -14,6 +14,8 @@
 </head>
 
  <body>
+   <main>
+   <div class = "all">
    <div class="dropdown">
      <a href="index.html"><button type="button">Home</button></a>
    </div>
@@ -38,9 +40,7 @@
            <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
          </div>
        </div>
-<br>
-<br>
-<br>
+     </div>
 <br>
 <br>
 
@@ -155,6 +155,6 @@ comfortable and confident in their own. </p>
 </article>
 
 
-
+</main>
  </body>
 </html>
